--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -57,3 +57,147 @@
 .modal__cross-icon {
   fill: currentColor;
 }
+.modal__title {
+  color: var(--secondary-text-color);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.15;
+  text-align: center;
+  margin-bottom: 12px;
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-form__item {
+  position: relative;
+  margin-bottom: 10px;
+  height: 58px;
+}
+.modal-form__label {
+  position: absolute;
+  top: 0px;
+  left: 0;
+
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+}
+%modal-form__input {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  padding-left: 40px;
+  border: 1px solid var(--modal-form-border-color);
+  border-radius: 4px;
+  font: inherit;
+
+  -webkit-appearance: none;
+  appearance: none;
+
+  @include customTransition(border-color);
+
+  &:focus,
+  &:active,
+  &:focus-visible {
+    border: 1px solid var(--input-border-active-color);
+    outline: none;
+  }
+}
+.modal-form__name {
+  @extend %modal-form__input;
+}
+.modal-form__icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+  @include customTransition(fill);
+
+  .modal-form__item:focus-within > & {
+    fill: var(--input-border-active-color);
+  }
+}
+.modal-form__tel {
+  @extend %modal-form__input;
+}
+.modal-form__email {
+  @extend %modal-form__input;
+}
+.modal-form__textarea {
+  position: relative;
+  height: 138px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.modal-form__comment {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 12px 16px;
+  resize: none;
+  border: 1px solid var(--modal-form-border-color);
+  border-radius: 4px;
+  height: 120px;
+  width: 100%;
+  @include customTransition(border-color);
+
+  &::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+  }
+
+  &:focus,
+  &:active,
+  &:focus-visible {
+    border: 1px solid var(--input-border-active-color);
+    outline: none;
+  }
+}
+.modal-form__policy {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+}
+.modal-form__policy-agreement {
+}
+.modal-form__policy-link {
+  color: var(--accent-color);
+}
+.modal-form__checkbox {
+}
+.modal-form__custom-checkbox {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 15px;
+  margin-right: 8px;
+  border-radius: 2px;
+  outline: 1.5px solid var(--secondary-text-color);
+  outline-offset: -1.5px;
+
+  @include customTransition(outline-color);
+
+  .modal-form__checkbox:checked + & {
+    outline-color: var(--input-border-active-color);
+  }
+}
+.modal-form__custom-checkbox-icon {
+  opacity: 0;
+  @include customTransition(opacity);
+
+  .modal-form__checkbox:checked + .modal-form__custom-checkbox & {
+    opacity: 1;
+  }
+}
+.modal-form__button-primary {
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: transparent;
+}
