--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -161,13 +161,11 @@
   margin-right: auto;
   margin-bottom: 30px;
 }
-.modal-form__policy-agreement {
-}
 .modal-form__policy-link {
   color: var(--accent-color);
 }
-.modal-form__checkbox {
-}
+// .modal-form__checkbox {
+// }
 .modal-form__custom-checkbox {
   position: relative;
   display: flex;
