--- a/css/main.css
+++ b/css/main.css
@@ -47,20 +47,20 @@ body {
   letter-spacing: 0.03em;
 }
 
-.list, .social-list {
+.list, .social-list, .nav-menu, .header-contacts {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.link, .logo {
+.link, .logo, .nav-menu__link, .header-contacts__link {
   display: inline-block;
   text-decoration: none;
   padding: 15px 0;
   color: inherit;
 }
 
-.container {
+.container, .page-header__container {
   width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
@@ -508,6 +508,125 @@ body {
 }
 
 .page-header {
-  background-color: var(--footer-background-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  border-bottom: 1px solid #ececec;
+  background-color: var(--background-color);
+  min-height: 80px;
+}
+
+.page-header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  margin-left: 93px;
+}
+
+.nav-menu__item {
+  position: relative;
+  margin-left: 50px;
+}
+
+.nav-menu__item:first-child {
+  margin-left: 0;
+}
+
+.nav-menu__link {
+  color: var(--secondary-text-color);
+  padding: 32px 0;
+  -webkit-transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
+}
+
+.nav-menu__link:hover, .nav-menu__link:focus {
+  color: var(--accent-color);
+}
+
+.current {
+  color: var(--accent-color);
+}
+
+.current::after {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  background-color: var(--accent-color);
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+}
+
+.header-contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.header-contacts__item {
+  margin-left: 50px;
+}
+
+.header-contacts__item:first-child {
+  margin-left: 0;
+}
+
+.header-contacts__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: var(--main-text-color);
+  -webkit-transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
+}
+
+.header-contacts__link:hover, .header-contacts__link:focus {
+  color: var(--accent-color);
+}
+
+.header-contacts__icon {
+  fill: currentColor;
+  margin-right: 10px;
 }
 /*# sourceMappingURL=main.css.map */
