--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -55,7 +55,7 @@ body {
   margin: -1px;
 } */
 /* ====================HEADER==================== */
-.page-header {
+/* .page-header {
   position: fixed;
   top: 0;
   left: 0;
@@ -73,7 +73,7 @@ body {
 .nav-flex {
   display: flex;
   align-items: center;
-}
+} */
 /* .list {
   list-style: none;
   margin: 0;
@@ -85,9 +85,9 @@ body {
   padding: 15px 0;
   color: inherit;
 } */
-.site-nav .link {
+/* .site-nav .link {
   padding: 32px 0;
-}
+} */
 /* logo style */
 /* .logo {
   font-family: Raleway, sans-serif;
@@ -107,10 +107,10 @@ body {
   color: var(--background-color);
 } */
 /* nav style */
-.site-nav {
+/* .site-nav {
   margin-left: 93px;
-}
-.site-nav,
+} */
+/* .site-nav,
 .header-contacts {
   display: flex;
   align-items: center;
@@ -118,8 +118,8 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-}
-.site-nav .link {
+} */
+/* .site-nav .link {
   color: var(--secondary-text-color);
   transition: color 250ms var(--timing-function);
 }
@@ -138,36 +138,36 @@ body {
   width: 100%;
   height: 4px;
   border-radius: 2px;
-}
-.site-nav .list-item,
+} */
+/* .site-nav .list-item,
 .header-contacts .list-item {
   margin-left: 50px;
-}
-.site-nav .list-item:first-child,
+} */
+/* .site-nav .list-item:first-child,
 .header-contacts .list-item:first-child {
   margin-left: 0px;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
-}
+} */
 /* header contacts style*/
-.header-contacts {
+/* .header-contacts {
   color: var(--main-text-color);
   transition: color 250ms var(--timing-function);
-}
-.header-contacts.link:hover,
-.header-contacts.link:focus,
+} */
+/* .header-contacts.link:hover,
+.header-contacts.link:focus, */
 .footer-contact.link:hover,
 .footer-contact.link:focus,
 .footer-adress.link:hover,
 .footer-adress.link:focus {
   color: var(--accent-color);
 }
-.icon-contact {
+/* .icon-contact {
   fill: currentColor;
   margin-right: 10px;
-}
+} */
 /* ==========================HERO======================= */
 /* hero sections style */
 .hero {
