--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,3 +1,91 @@
 .page-header {
-  background-color: var(--footer-background-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  border-bottom: 1px solid #ececec;
+  background-color: var(--background-color);
+  min-height: 80px;
+}
+.page-header__container {
+  @extend .container;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navigation {
+  display: flex;
+  align-items: center;
+}
+.nav-menu {
+  @extend .list;
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  margin-left: 93px;
+}
+.nav-menu__item {
+  position: relative;
+  margin-left: 50px;
+
+  &:first-child {
+    margin-left: 0;
+  }
+}
+.nav-menu__link {
+  @extend .link;
+  color: var(--secondary-text-color);
+  padding: 32px 0;
+  @include customTransition(color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.current {
+  color: var(--accent-color);
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    background-color: var(--accent-color);
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+  }
+}
+.header-contacts {
+  @extend .list;
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+.header-contacts__item {
+  margin-left: 50px;
+  &:first-child {
+    margin-left: 0;
+  }
+}
+.header-contacts__link {
+  @extend .link;
+  display: flex;
+  align-items: center;
+  color: var(--main-text-color);
+  @include customTransition(color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.header-contacts__icon {
+  fill: currentColor;
+  margin-right: 10px;
 }
