herro, benefits section refactored

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -26,3 +26,8 @@ body {
   padding: 0 15px;
   margin: 0 auto;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--background-color);
+}
