--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-.list, .social-list, .nav-menu, .header-contacts {
+.list, .social-list, .nav-menu, .header-contacts, .benefits {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -64,6 +64,12 @@ body {
   width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--background-color);
 }
 
 .button-primary, .button-gallery {
@@ -628,5 +634,77 @@ body {
 .header-contacts__icon {
   fill: currentColor;
   margin-right: 10px;
+}
+
+.hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  max-height: 600px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--footer-background-color);
+  background-image: -webkit-gradient(linear, left top, right top, from(var(--hero-gradient)), to(var(--hero-gradient))), url("../images/squoosh_hero-Img.jpg");
+  background-image: linear-gradient(to right, var(--hero-gradient), var(--hero-gradient)), url("../images/squoosh_hero-Img.jpg");
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+
+.hero__title {
+  margin: 0 auto 30px;
+  width: 45%;
+  color: var(--background-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-transform: uppercase;
+}
+
+.benefits__section {
+  padding-bottom: 0;
+}
+
+.benefits {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.benefits__item {
+  width: 270px;
+}
+
+.benefits__item + .benefits__item {
+  margin-left: 30px;
+}
+
+.benefits__icon-wrap {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 270px;
+  height: 120px;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  background-color: var(--button-background-color);
+}
+
+.benefits__item-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: var(--secondary-text-color);
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=main.css.map */
