--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -170,7 +170,7 @@ body {
 } */
 /* ==========================HERO======================= */
 /* hero sections style */
-.hero {
+/* .hero {
   padding-top: 200px;
   padding-bottom: 200px;
 
@@ -194,7 +194,7 @@ body {
   font-size: 44px;
   line-height: 1.36;
   text-transform: uppercase;
-}
+} */
 /* button {
   font-family: inherit;
   cursor: pointer;
@@ -216,7 +216,6 @@ body {
   letter-spacing: 0.06em;
   min-width: 200px;
   box-shadow: transparent;
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
   padding: 8px 30px;
   transition: background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
 }
@@ -246,11 +245,11 @@ body {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 } */
 /* =================== section style ===============*/
-.section {
+/* .section {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: var(--background-color);
-}
+} */
 .section-title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -261,13 +260,12 @@ body {
   letter-spacing: 0.03em;
 }
 /* =================== BENEFITS SECTION ============ */
-.benefits {
+/* .benefits {
   display: flex;
   justify-content: space-between;
   padding-bottom: 0;
 }
 .benefits-item {
-  /* flex-basis: calc((100%-90px) / 4); */
   width: 270px;
 }
 .benefits-item + .benefits-item {
@@ -292,7 +290,7 @@ body {
   border-radius: 4px;
   margin-bottom: 30px;
   background-color: var(--button-background-color);
-}
+} */
 /* =================== SPECIALIZATIO SECTION ====== */
 .specialization {
   display: flex;
@@ -598,7 +596,7 @@ body {
 .send-icon {
   fill: currentColor;
   margin-left: 10px;
-} 
+}
 /* =============================== DECORATION ====================================== */
 @keyframes blockRotate {
   0% {
