--- a/css/main.css
+++ b/css/main.css
@@ -47,13 +47,13 @@ body {
   letter-spacing: 0.03em;
 }
 
-.list, .social-list, .nav-menu, .header-contacts, .benefits {
+.list, .social-list, .nav-menu, .header-contacts, .benefits, .specialization, .team, .clients, .footer-contacts {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.link, .logo, .nav-menu__link, .header-contacts__link {
+.link, .logo, .nav-menu__link, .header-contacts__link, .footer-contacts__link {
   display: inline-block;
   text-decoration: none;
   padding: 15px 0;
@@ -70,6 +70,16 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: var(--background-color);
+}
+
+.section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+  color: var(--secondary-text-color);
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .button-primary, .button-gallery {
@@ -205,20 +215,6 @@ body {
 .social-list__href--dark {
   background-color: var(--footer-social);
   color: var(--background-color);
-}
-
-.subscribe-form__container {
-  margin-left: 93px;
-}
-
-.subscribe-form__title {
-  margin-top: 0;
-  margin-bottom: 20px;
-  color: var(--background-color);
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
 }
 
 .subscribe-form {
@@ -706,5 +702,207 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+
+.specialization {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.specialization__item {
+  -webkit-box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.specialization__item + .specialization__item {
+  margin-left: 30px;
+}
+
+.specialization__image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.specialization__text-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background-color: var(--specialization-bkg);
+  color: var(--background-color);
+  text-transform: uppercase;
+}
+
+.team__section {
+  background-color: var(--button-background-color);
+}
+
+.team {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.team-member {
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-member + .team-member {
+  margin-left: 30px;
+}
+
+.team-member__wrap {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: var(--background-color);
+}
+
+.team-member__title {
+  margin: 0px auto 10px;
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.team-member__position {
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  margin: 0 auto 16px;
+}
+
+.clients {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.clients__item:not(:first-child) {
+  margin-left: 30px;
+}
+
+.clients__link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 170px;
+  height: 92px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid var(--social-color);
+  border-radius: 4px;
+  color: var(--social-color);
+  -webkit-transition: color 250ms var(--timing-function), border-color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function), border-color 250ms var(--timing-function);
+}
+
+.clients__link:hover, .clients__link:focus {
+  border-color: var(--accent-color);
+  color: var(--accent-color);
+}
+
+.clients__icon {
+  fill: currentColor;
+}
+
+.footer {
+  background-color: var(--footer-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.footer-group__title {
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: var(--background-color);
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.social__footer-group {
+  margin-left: 70px;
+}
+
+.subscribe__footer-group {
+  margin-left: 93px;
+}
+
+.footer-contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 81px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  font-style: normal;
+}
+
+.footer-contacts__item:first-child {
+  padding-top: 0;
+}
+
+.footer-contacts__link {
+  color: var(--footer-contacts-color);
+  padding: 0px;
+  -webkit-transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
+}
+
+.footer-contacts__link:hover, .footer-contacts__link:focus {
+  color: var(--accent-color);
+}
+
+.footer-contacts__link--adress {
+  color: var(--background-color);
 }
 /*# sourceMappingURL=main.css.map */
