--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -31,3 +31,12 @@ body {
   padding-bottom: 94px;
   background-color: var(--background-color);
 }
+.section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+  color: var(--secondary-text-color);
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
